--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,4 +6,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 </noscript>
 <!-- <script src="https://www.etrigannews.com/mVpaizRunC/js/etrigan.min.js" defer></script> -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQVBTB6VX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-DHQVBTB6VX');
+</script>
 <!-- end custom head snippets -->
