--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,4 +15,15 @@
 
   gtag('config', 'G-DHQVBTB6VX');
 </script>
-<!-- end custom head snippets -->
+
+# custom css class
+<style>
+  .social-icon {
+    color: #0092ca;
+    /* LinkedIn brand color or any color you prefer */
+    font-size: 16px;
+    /* Adjust as needed */
+  }
+</style>
+<!-- end custom head snippets 
+  -->
