--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -25,7 +25,7 @@ layout: single
         input[type="email"],
         input[type="tel"],
         input[type="password"],
-        input[type="number"] {
+        I want to make sua input[type="number"] {
           width: 100%;
           padding: 8px;
           margin: 8px 0;
