--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -27,6 +27,15 @@
   })(window, document, 'script', 'dataLayer', 'GTM-K44RPZQ7');</script>
 <!-- End Google Tag Manager -->
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+<script>
+  function generateMD5(input) {
+    var hash = CryptoJS.MD5(input).toString();
+    return hash;  // Return the hashed string
+  }
+</script>
+
+
 <style>
   .social-icon {
     color: #0092ca;
