--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,35 +5,35 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 </noscript>
-<!-- <script src="https://www.etrigannews.com/mVpaizRunC/js/etrigan.min.js" defer></script> -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQVBTB6VX"></script>
-<script>
+<!-- <script src="https://www.etrigannews.com/mVpaizRunC/js/etrigan.min.js" defer></script>
+Google tag (gtag.js) -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQVBTB6VX"></script> -->
+<!-- <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'G-DHQVBTB6VX');
-</script>
+</script> -->
 
 <!-- Google Tag Manager -->
-<script>(function (w, d, s, l, i) {
+<!-- <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
       'gtm.start':
         new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
       j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
         'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-K44RPZQ7');</script>
+  })(window, document, 'script', 'dataLayer', 'GTM-K44RPZQ7');</script> -->
 <!-- End Google Tag Manager -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <script>
   function generateMD5(input) {
     var hash = CryptoJS.MD5(input).toString();
     return hash;  // Return the hashed string
   }
-</script>
+</script> -->
 
 
 <style>
