remove font awesome integrationp

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,10 +1,10 @@
 <!-- start custom head snippets -->
-<link rel="preload" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" as="style"
+<!-- <link rel="preload" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" as="style"
   onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-</noscript>
+</noscript> -->
 <!-- <script src="https://www.etrigannews.com/mVpaizRunC/js/etrigan.min.js" defer></script>
 Google tag (gtag.js) -->
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQVBTB6VX"></script> -->
