--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="page__footer-follow">
+<!-- <div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.data.ui-text[site.locale].follow_label %}
     <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
@@ -20,4 +20,4 @@
         default: "Feed" }}</a></li>
     {% endunless %}
   </ul>
-</div>
+</div> -->
