add favicon to head

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -44,5 +44,6 @@ Google tag (gtag.js) -->
     /* Adjust as needed */
   }
 </style>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <!-- end custom head snippets 
   -->
